--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,6 +1,6 @@
 spring:
     datasource:
-        url: jdbc:mysql://localhost:3306/pm?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8
+        url: jdbc:mysql://localhost:3306/pm?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&allowMultiQueries=true
         username: root
         password: root
         #连接池的配置信息
